--- a/collectibles-api/package.json
+++ b/collectibles-api/package.json
@@ -11,6 +11,7 @@
     "@types/ajv": "^1.0.0",
     "@types/argon2": "^0.15.0",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
@@ -28,6 +29,7 @@
     "argon2": "^0.30.1",
     "computed-types": "^1.11.2",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
